Kubernetes-hands-on/Kubernetes-Custom-LB/CLB-Deployment-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-load-balancer
spec:
  clusterIP: None
  selector:
    app: my-load-balancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-load-balancer
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-load-balancer
  template:
    metadata:
      labels:
        app: my-load-balancer
    spec:
      containers:
      - name: my-load-balancer
        image: my-load-balancer-image
        ports:
        - containerPort: 8080
